<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/val"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="6sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="6sp"
        android:background="#C0C0C0"
        android:gravity="center_vertical|end"
        android:text="@string/value"
        android:textColor="#000000"
        android:textDirection="ltr"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btnLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="5sp">

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_4"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_5"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_6"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_7"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_8"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_9"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_10"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_11"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_12"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

        <Button
            android:id="@+id/b13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_13"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_14"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_15"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:backgroundTint="#C0C0C0"
            android:text="@string/btn_16"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>